<resources>
    <string name="app_name" translatable="false">Work-hours sticks</string>

    <string name="splash_emblem" translatable="false">WHS</string>
    <string name="splash_title" translatable="false">Work-hours sticks</string>
    <string name="splash_content">Remember working time your favorite stores ALWAYS!</string>
    <string name="splash_content_db1">We helped you save</string>
    <string name="splash_content_db2">stickers already.!</string>

    <string name="title_activity_main" translatable="false">WHS</string>
    <string name="title_activity_add">WHS ADD</string>
    <string name="title_activity_set">WHS SETTINGS</string>
    <string name="title_activity_about">WHS ABOUT</string>

    <!--<string name="text_same">Maps Maps Maps</string>-->
    <string name="activity_set_button_gps_e">Enable satelite GPS</string>
    <string name="activity_set_button_gps_d">Disable satelite GPS</string>
    <string name="activity_set_button_wifi_e">Enable Wi-Fi GPS</string>
    <string name="activity_set_button_wifi_d">Disable Wi-Fi GPS</string>

    <string name="marker_curr_location_title">I am there</string>
    <string name="marker_curr_location_snippet">test test test test test</string>

    <string name="button_save_store">Save</string>
    <string name="switch_day_night">Non-stop</string>
    <string name="adapter_store">Store:</string>
    <string name="adapter_phone">Phone:</string>
    <string name="adapter_address">Address:</string>
    <string name="toast_ok">Ok!</string>
    <string name="toast_ops">Oops!</string>
    <string name="hint_store">name of store</string>
    <string name="hint_phone">phone</string>
    <string name="hint_address">address</string>
    <string name="day_1">Mon</string>
    <string name="day_2">Tue</string>
    <string name="day_3">Wed</string>
    <string name="day_4">Thu</string>
    <string name="day_5">Fri</string>
    <string name="day_6">Sat</string>
    <string name="day_7">Sun</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_edit">EDIT</string>
    <string name="dialog_button_del">DELETE</string>
    <string name="dialog_inner_delete">Do you really want to delete store:</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="toast_saved">was saved!</string>
    <string name="day_from">from</string>
    <string name="day_to">to</string>
    <string name="day_rest">day OFF</string>
</resources>
