<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:picker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/gray"
    android:clickable="false"
    tools:context="com.whs.ActivityMain">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:hint="@string/hint_store" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhone"
            android:hint="@string/hint_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddress"
            android:hint="@string/hint_address" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_day_night"
            android:id="@+id/switchDayNight" />


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_day_seek_bar">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_1"
                        android:id="@+id/textView1"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_from"
                        android:id="@+id/textView1From"
                        android:textAlignment="center"/>

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->

                    <com.vi.swipenumberpicker.SwipeNumberPicker
                        android:id="@+id/number_picker_1_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        picker:snp_numberColor="@color/text"
                        picker:snp_arrowColor="@color/text"
                        picker:snp_backgroundColor="@color/gray"
                        picker:snp_max="10"
                        picker:snp_min="1"
                        picker:snp_value="5"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_to"
                        android:id="@+id/textView1To"
                        android:textAlignment="center"/>

                    <com.vi.swipenumberpicker.SwipeNumberPicker
                        android:id="@+id/number_picker_1_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        picker:snp_numberColor="@color/text"
                        picker:snp_arrowColor="@color/text"
                        picker:snp_backgroundColor="@color/gray"
                        picker:snp_max="10"
                        picker:snp_min="1"
                        picker:snp_value="5"
                        android:textSize="22sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_2"
                        android:id="@+id/textView2" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_3"
                        android:id="@+id/textView3" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_4"
                        android:id="@+id/textView4" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_5"
                        android:id="@+id/textView5" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_6"
                        android:id="@+id/textView6" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkbox7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/day_7"
                        android:id="@+id/textView7" />

                    <!--<com.edmodo.rangebar.RangeBar
                        android:id="@+id/rangeBar7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>-->
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_store"
            android:id="@+id/buttonSaveStore" />

    </LinearLayout>
</RelativeLayout>
